--- a/views/home.html
+++ b/views/home.html
@@ -47,18 +47,12 @@
           <li><a href="">Tiendas Oficiales</a></li>
           <li><a href="">Vender</a></li>
           <li><a href="">Ayuda</a></li>
-        </ul>
-        <ul>
-          <li>
-            <a href="">Creá tu cuenta <i class="fas fa-credit-card"></i></a>
-          </li>
-          <li>
-            <a href="">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-          </li>
-          <li>
-            <a href="">Mis compras <i class="fas fa-shopping-basket"></i></a>
-          </li>
-        </ul>
+      </ul>
+      <ul>
+          <li><a href="/register">Creá tu cuenta <i class="fas fa-credit-card"></i></a></li>
+          <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt "></i></a></li>
+          <li><a href="">Mis compras <i class="fas fa-shopping-basket "></i></a></li>
+      </ul>    
       </nav>
       <div class="burger-menu">
         <i class="fas fa-bars"></i>
