--- a/views/register.html
+++ b/views/register.html
@@ -17,7 +17,7 @@
 <body class="home">
     <header>
         <div class="container-logo">
-            <img id="logo" src="/img/logo-mercado-liebre.svg" alt="Logo de Mercado Liebre"><br>
+            <img id="logo" src="/img/logo.svg" alt="Logo de Mercado Liebre"><br>
             <div class="form">
                 <form action="" class="busqueda">
                     <input type="text" placeholder="Buscar productos, marcas">
