--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,57 +1,38 @@
-@import url(style.css);
+@import url(./style.css);
 
-.register{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body{
+    background-color: white;
 }
 
-.contentRegister{
-    background-color: aliceblue;
-    box-shadow: 0 0 5px rgb(102, 100, 100);
-    border-radius: 5px;
+#form_registro{
+    margin: 100px auto;
     padding: 20px;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    width: 300px;
+    border-radius: 10px;
+    max-width: 300px;
+
+    background-color: var(--GrisClaro);
 }
 
-.contentInput{
+.input_r{
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin-bottom: 1rem;
+    height: 35px;
+    margin: 20px 0;
+    padding-left: 10px;
+    border: transparent;
+    border-radius: 5px;
 }
 
-.contentInput input{
-    height: 30px;
-    border-radius: 3px;
-    padding-left: 8px;
+.input_d{
+    width: 100%;
+    height: 35px;
+    margin: 20px 0;
+    padding-left: 10px;
+    border: transparent;
+    border-radius: 5px;
 }
 
-.contentInput label{
-    color: lightslategrey;
-    font-size: 12px;
-}
-
-.intereses{
-    margin-bottom: 1rem;
-}
-
-.btn button{
-    width: 48%;
-    height: 30px;
-    background-color: rgb(64, 64, 240);
-    color: white;
-    border: none;
-    border-radius: 3px;
-}
-
-.btn button:nth-child(2){
-    background-color: red;
-    margin-left: .4rem;
-}
-
-.perfilUser select{
-    height: 30px;
-    border-radius: 3px;
+#checkbox{
+   margin: 15px 0; 
 }
