--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,421 +1,311 @@
-:root {
-    /* COLORES */
-    --color-amarillo : #EAC926;
-    --color-azul : #03264C;
-    --color-celeste : #1259c3;
-    --color-grisOscuro : #666;
-    --color-grisClaro : #ebebeb;
-    --color-verde : #39b54a;
-}
+:root{
+    /* colores */
+    --Amarillo: #EAC926;
+    --Azul: #03264C;
+    --Celeste: #1259c3;
+   --GrisOscuro: #666;
+    --GrisClaro: #ebebeb;
+    --Verde: #39b54a; 
 
-body{
-    background-color: var(--color-grisClaro);
-}
 
+   /*  tipografia */
+   --Roboto: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap');
+
+
+/* Tamaños Tipográficos */
+--cuerpos-de-texto: 12px;
+    --ofertas: 24px;
+    --precios: 18px;
+    --descuentos: 16px;
+    --descripciones: 16px;
+}
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto';
 }
+body{
+    background-color: var(--GrisClaro);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/* HEADER */
 
-/* HEADER  */
-
-.home header{
-    background-color: var(--color-amarillo) ;
+header {
+    background-color: var(--Amarillo);
+    padding: 30px 20px;
     display: flex;
-    flex-direction: column;
-    padding: 25px 20px;
+    flex-wrap: wrap;
     align-items: center;
-    width: 100%;
+    justify-content: center;
 }
-
-.home header div.container-logo{
-    display: flex;
-    justify-content:space-between;
-    margin-bottom: 20px;
+header img {
+    width: 45%;
+    margin: 0 10px 0 0;
+    padding: 0;
+    display: inline;
 }
-
-.home header .container-logo img#logo{
-    width: 50%;
-    margin-right: 10px;
-}
-
-.home header div.container-logo div.form{
-    display: flex;
-    width: 50%;
-}
-
-.home header div.container-logo div.form form{
-    width: 100%;
-}
-
-.home header div.container-logo div.form form input{
-    background-color: white;
-    background-image: url('/img/searchicon.png');
-    background-size: 17px;
-    background-position: 97% center ;
-    background-repeat: no-repeat;
-    padding-left: 10px;
-    padding-right: 25px;
-    border-radius: 7px;
+header #buscador {
+    width: 40%;
+    height: 40px;
+    border-radius: 5px 0 0 5px;
     border: none;
-    height: 100%;
+    font-size: 15px;
+    padding-left: 10px;
+    display: inline;
+}
+header #lupa {
+    background-color: white;
+    padding: 12px 5px;
+    border-radius: 0 5px 5px 0;
+    color: var(--GrisOscuro);
+}
+header p  {
+    font-size: 15px;
+    margin: 20px 10%;
     width: 100%;
-    font-size: 0.79rem;
+    text-align: center;
 }
-
-.home header div.container-logo div.form button{
-    display: none;
-}
-
-.home header nav ul{
-    list-style: none;
-}
-
-.home header nav ul a {
+header nav ul li a {
     text-decoration: none;
     color: black;
 }
-
-.home header nav{
+#nav {
     display: none;
 }
-
-.home header p{
-    margin-bottom: 30px;
-}
-
-
-.home header div.burger-menu{
-    background-color: var(--color-celeste);
-    padding: 11px;
-    border-radius: 5px;
+.burger-menu i {
+    background-color: var(--Celeste);
     color: white;
     font-size: 25px;
+    padding: 11px 13px;
+    border-radius: 5px;
 }
-
-/* END HEADER */
-
-
-
-/* MAIN */
-
-.home main img.banner{
-    margin-bottom: 20px;
-}
-
-.home main section h3{
-    color: var(--color-grisOscuro);
-    margin-left: 10px;
-}
-
-.home main section article{
-    background-color: var(--color-grisClaro);
-    padding: 10px;
-    position: relative;
-    max-width: 368px;
-    margin: 0 auto ;
-}
-
-.home main section article div.cont{
-    background-color: white;
-    width: 100%;
-    padding: 15px;
-}
-
-.home main section article div.cont strong{
-    color: var(--color-grisOscuro);
-    font-weight: 200;
-}
-
-.home main section article div.precio-producto{
+.burger-menu {
     display: flex;
-    margin-bottom: 20px;
-}
-
-.home main section article div.cont div.precio-producto p{
-    width: 30%;
-}
-
-.home main section article div.precio-producto p:last-child{
-    color: var(--color-verde);
-    width: 70%;
-}
-
-.home main section article i{
-    font-size: 16px;
-    padding: 5px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid var(--color-verde);
-    background-color: #fff;
-    color:var(--color-verde);
-    border-radius: 50%;
-    position: absolute;
-    right: 20px;
-    top: 75%;
-    transition: all .3s ease;
-} 
-
-.home main section article i:hover{
-    transform: rotateZ(-90deg);
-}
-
-/* END  MAIN  */
-
-
-/*FOOTER*/
-
-.home footer{
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 10px;
-}
-
-.home footer .contentArticle article{
-    margin-bottom: 25px;
-}
-
-.home footer .contentArticle article i{
-    color: var(--color-celeste);
-    font-size: 30px;
-    margin-bottom: 20px;
-}
-
-.home footer .contentArticle article p{
-    font-size: var(--paragraph);
-    width: 80%;
+    flex-direction: column;
     margin: 0 auto;
 }
 
-.home footer .contentArticle article h4{
-    font-size: 14px;
-}
-
-.home footer  p#copyright{
-    font-size: var(--paragraph);
-    color: var(--color-grisOscuro);
-    text-align: left;
-    margin-left: 10px;
-} 
-
-
-/* MEDIA QUERIES */
-
-@media(min-width:768px){
-
-/* HEADER */
-
-.home header{
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 25px 20px;
-    align-items: center;
-    justify-content: space-between;
-}
-    
-.home header div.container-logo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 0px;
-}
-
-.home header div.container-logo div.form form{
-    width: 75%;
-    margin-right: 5px;
-    display: flex;
-}
-    
-.home header div.container-logo div.form form input{
-    background-image: none;
-    padding-left: 0px;
-    padding-right: 0px;
-    border-radius: 2px 0 0 2px;
-    border: 1px solid black;
-}
-  
-.home header div.container-logo div.form button.busqueda{
-    display: flex;
-    border: 1px solid black;
-    border-radius:0 2px 2px 0;
-    padding: 1px;
-}
-
-.home header p{
-    margin-bottom: 0px;
-    margin-top: 7px;
-    font-size: 0.79rem;
-}
-    
-.home header div.burger-menu{
-    display: none;
-}  
-    
-.home header nav{
-    display: flex;
-    margin-top: 30px;
-    justify-content:space-between ;
-    align-items: center;
-    width: 100%;
-}    
-
-.home header nav ul{
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-}
-    
-.home header nav ul li{
-    margin-right: 15px;
-    font-size: 0.83rem;
-}
-
-.home header nav ul li:last-child {
-    margin-right: 0;
-}
-
-/* END HEADER   */
-    
-
 /* MAIN */
-
-.home main section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.home main section h3{
-    color: var(--color-grisOscuro);
-    display: block;
+main {
     width: 100%;
-    margin: 0 0 20px 26px;
-    font-size: 24px;
+    max-width: 1024px;
+    margin: auto;
 }
 
-.home main section article{
-    background-color: none;
-    padding: 0px;
+main section {
+    margin: 0;
+    padding: 0;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+}
+main section article {
+    max-height: 450px;
+    max-width: 100x;
+    margin: 10px auto;
+    border-top: 1px solid #ebebeb;
+    background-color: white;
     position: relative;
-    max-width: 330px;
-    margin-bottom: 20px;
-    box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.2);
+    transition: .5s;
 }
-
+main section article:hover {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100); 
 }
-/* END  MAIN  */
-
-
-@media(min-width:990px){
-    .home main section article{
-        max-width: 400px;
-    }
-
-    .home main section article i{
-        font-size: 16px;
-        padding: 5px;
-        width: 30px;
-        height: 30px;
-        border: 1px solid var(--color-verde);
-        background-color: #fff;
-        color:var(--color-verde);
-        border-radius: 50%;
-        position: absolute;
-        right: 20px;
-        top: 79%;
-    } 
+main h2 {
+    text-align: center;
 }
-
-/* PC */
-
-@media(min-width:1200px){
-/* HEADER */
-
-.home header{
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 25px 20px;
-    align-items: center;
-    justify-content: space-between;
+main section article img {
+    width: 300px;
+    padding: 5px;
 }
+main section article h3 {
+    margin: 0;
+    padding: 10px 0px 10px 20px;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+    transition: .5s;
+} 
+main section article:hover h3 {
     
-.home header div.container-logo div.form form{
-    width: 100%;
-    margin-right: 5px;
-    display: flex;
+    color: black;
 }
-    
-.home header div.container-logo div.form form input{
-    background-image: none;
-    padding-left: 0px;
-    padding-right: 0px;
-    border-radius: 2px 0 0 2px;
-    border: 1px solid black;
-    font-size: 1rem;
-}
-  
-.home header div.container-logo div.form button.busqueda{
-    display: flex;
-    border: 1px solid black;
-    border-radius:0 2px 2px 0;
-    padding: 1px;
-    justify-content: center;
-    align-items: center;
-}
-
-.home header p{
-    margin-bottom: 0px;
-    margin-top: 7px;
-    font-size: 1rem;
-    width: 35%;
-}
-
-.home header nav{
-    display: flex;
-    margin-top: 30px;
-    justify-content:space-between ;
-    align-items: center;
-    width: 100%;
-}    
-
-   
-.home header nav ul li{
-    margin-right: 25px;
-    font-size: 1rem;
-}
-    
-/* END HEADER */
-
-
-/* MAIN */
-.home main section article{
-    max-width: 251px;
-}
-
-.home main section article i{
+main section article i {
+    color: var(--Verde);
+    display: block;
     font-size: 16px;
     padding: 5px;
     width: 30px;
     height: 30px;
-    border: 1px solid var(--color-verde);
-    background-color: #fff;
-    color:var(--color-verde);
+    border: 1px solid var(--Verde);
     border-radius: 50%;
     position: absolute;
     right: 20px;
-    top: 70%;
+    bottom: 75px;
+}
+main section article hr {
+    border: 1px solid rgb(243, 243, 243);
+    width: 100%;
+}
+main section article p {
+    margin: 10px 5px 5px 20px;
+    font-size: 18px;
+    font-weight: 501;
+    display: inline-block;
+}
+.oferta {
+    color: var(--Verde);
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+}
+.titulo-sections {
+    color: var(--GrisOscuro);
+}
+
+#img-publicidad img {
+    width: 100%;
+    height: auto;
+}
+
+
+/* FOOTER */
+footer {
+    margin: 0px 3px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+footer section {
+    padding-top: 20px;
+    background-color: white;
+}
+footer article i {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: var(--Celeste);
+}
+footer article i:hover {
+    color: #03264C;
+}
+footer article {
+    display: inline-flex;
+    flex-direction: column;
+    margin: 50px 30px;    
+}
+footer article h2 {
+    margin-bottom: 0;
+    
+    font-size: 12px;
+    color: var(--GrisOscuro);
+}
+footer article  p {
+    margin-top: 0;
+    padding-top: 0;
+    max-width: 310px;
+    font-size: 10px;
+    color: var(--GrisOscuro);
+}
+footer p {
+    max-width: 310px;
+    margin: auto;
+    text-align: center;
+}
+
+/*  TABLET */
+
+@media  (min-width: 576px) {
+
+    header img {
+        margin: 0;
+        padding: 0;
+        margin-right: 10px;
+        text-align: left;
+        width: 30%;
+    }
+    header #buscador {
+        margin: 0;
+        width: 23%;
+    }
+    header p {
+        padding: 0;
+        margin: 0;
+        width: 40%;
+        font-size: 10px;
+        text-align: right;
+    }
+    header nav  {
+        margin-top: 40px;
+        font-size: 12px;
+        width: 100%;
+        display: inline-flex;
+    }
+    header nav ul li i {
+        margin: 0 2px;
+    }
+    header nav ul li {
+        font-size: 11px;
+        margin-right: 10px;
+    }    
+    .burger-menu {
+        display: none;
+    }
+    header nav ul {
+        list-style: none;
+        display: flex;
+    }
+    #nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    main h2 {
+        text-align: start;
+        margin: 15px 8%;
+    }
+    main section  {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    main section article img {
+        width: 200px;
+    }
+    main section article {
+        max-width: 200px;
+        margin: 10px 20px;
+    }
+    main section article .oferta {
+        font-size: 11px;
+    }
+    main section article .camion {
+        right: 10px;
+        font-size: 15px;
+        transition: transform .5s;
+    }
+    main section article .camion:hover {
+        transform: rotate(-90deg);
+    }
 } 
-/* END MAIN     */
 
-/* Footer */
-.contentArticle{
-    display: flex;
+    
+/*  DESKTOP */
 
+@media (min-width: 1080px) {
+    
+    header nav ul li {
+        font-size: 15px;
+        margin-right: 40px;
+    }
+    header #buscador {
+        width: 26%;
+    }
+    main h2 {
+        margin-left: 45px;
+    }
+    header p {
+        font-size: 15px;
+    }
+    
 }
-/* End Footer */
-
-}
-/* END MEDIA QUERIES */
