--- a/views/home.html
+++ b/views/home.html
@@ -1,219 +1,174 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="/css/style.css" />
-  </head>
-  <body class="home">
-    <header>
-      <div class="container-logo">
-        <img
-          id="logo"
-          src="/img/logo.svg"
-          alt="Logo de Mercado Liebre"
-        /><br />
-        <div class="form">
-          <form action="" class="busqueda">
-            <input type="text" placeholder="Buscar productos, marcas" />
-          </form>
-          <button class="busqueda">
-            <i class="fas fa-search"></i>
-          </button>
-        </div>
-      </div>
-      <p>
-        <i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de
-        crédito
-      </p>
-      <nav>
-        <ul class="menu-top">
-          <li><a href="">Ofertas</a></li>
-          <li><a href="">Tiendas Oficiales</a></li>
-          <li><a href="">Vender</a></li>
-          <li><a href="">Ayuda</a></li>
-      </ul>
-      <ul>
-          <li><a href="/register">Creá tu cuenta <i class="fas fa-credit-card"></i></a></li>
-          <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt "></i></a></li>
-          <li><a href="">Mis compras <i class="fas fa-shopping-basket "></i></a></li>
-      </ul>    
-      </nav>
-      <div class="burger-menu">
-        <i class="fas fa-bars"></i>
-      </div>
-    </header>
+    <script src="/js/card_info.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet"> 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+rel="stylesheet" />
+</head>
+<body>
+    
+<header>
+    <img src="/images/logo-mercado-liebre.svg" alt="logo de la página">
+    
+    <input type="search" name="barra-de-busqueda" id="buscador" placeholder="Buscar productos, marcas">
+    <i id="lupa" class="fas fa-search"></i>
 
-    <main>
-      <img
-        class="banner"
-        src="/img/home.jpg"
-        alt="Home banner"
-        width="100%"
-      />
-      <section>
-        <h3>Basado en tu última visita</h3>
-        <article>
-          <img
-            src="/img/img-cafetera-moulinex.jpg"
-            alt="Cafetera moulinex"
-            width="100%"
-          />
-          <div class="cont">
-            <div class="precio-producto">
-              <p class="precio">$6.770</p>
-              <p class="oferta">40% off</p>
+    <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+
+    <nav id="nav">
+        <ul>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Tiendas Oficiales</a></li>
+            <li><a href="#">Vender</a></li>
+            <li><a href="#">Ayuda</a></li>
+        </ul>
+
+        <ul> 
+            <li><a href="/register">Creá tu cuenta</a> <i class="far fa-id-card"></i></li>
+            <li><a href="/login">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
+            <li><a href="#">Mis compras</a> <i class="fas fa-shopping-basket"></i></li>
+        </ul>
+    </nav>
+        
+    <div class="burger-menu">
+        <i class="fas fa-bars" ></i>
+    </div>
+</header>
+
+<div id="img-publicidad">
+    <img src="/images/img-home-banner.jpg" alt="imagen-publicidad">
+</div>
+
+
+<main>
+    <h2 class="titulo-sections">Basado en tu última visita</h2>
+    <section>
+        <article class="card">
+            <div>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
             </div>
-            <strong>Cafetera Moulinex</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$5.770</p>
+            <p class="oferta">40% OFF</p>
+            <h3 class="desc">Cafetera Moulinex</h3>
+        </article>
+        
+        <article class="card">
+            <div>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$230.000</p>
+            <p class="oferta">20% OFF</p>
+            <h3 class="desc">MacBook Pro 2019<h3>
+        </article>
+        
+        <article class="card">
+            <div>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$70.500</p>
+            <p class="oferta">10% OFF</p>
+            <h3 class="desc">Samsung Galaxy S10<h3>
+        </article>
+        
+        <article class="card">
+            <div>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$23.200</p>
+            <p class="oferta">5% OFF</p>
+            <h3 class="desc">SmartTv Samsung 43"<h3>
+        </article>
+
+    </section>
+
+    <h2 class="titulo-sections">Sección de Ofertas</h2>
+
+
+    <section>
+        <article class="card">
+            <div>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$5.770</p>
+            <p class="oferta">40% OFF</p>
+            <h3 class="desc">Cafetera Moulinex</h3>    
+        </article>
+
+        <article class="card">
+            <div>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$230.000</p>
+            <p class="oferta">20% OFF</p>
+            <h3 class="desc">MacBook Pro 2019<h3>    
+        </article>
+
+        <article class="card">
+            <div>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$70.500</p>
+            <p class="oferta">10% OFF</p>
+            <h3 class="desc">Samsung Galaxy S10<h3>
+        </article>
+   
+        <article class="card">
+            <div>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="img-tv-samsung-smart">
+            </div>
+            <hr>
+            <i class="camion fas fa-truck"></i>
+            <p>$23.200</p>
+            <p class="oferta">5% OFF</p>
+            <h3 class="desc">SmartTv Samsung 43"<h3>
+        </article>
+    </section>
+</main>
+
+<footer>
+    <section>
+        <article>
+            <i class="fas fa-credit-card"></i>
+            <h2>Pagá con tarjeta o en efectivo</h2>
+            <p>Con mercado Liebre Cash, tnés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
         </article>
 
         <article>
-          <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook" width="100%" />
-          <div class="cont">
-            <div class="precio-producto">
-              <p class="precio">$230.000</p>
-              <p class="oferta">20% off</p>
-            </div>
-            <strong>MacBook Pro 2019</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
+            <i class="fas fa-gift"></i>
+            <h2>Envio gratis desde $ 2.500</h2>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés invios gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
         </article>
 
         <article>
-          <img
-            src="/img/img-samsung-galaxy-s10.jpg"
-            alt="Samsung Galaxy"
-            width="100%"
-          />
-          <div class="cont">
-            <div class="precio-producto">
-              <p>$70.500</p>
-              <p>10% off</p>
-            </div>
-            <strong>Samsung Galaxy S10</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
+            <i class="fas fa-user-shield"></i>
+            <h2>Seguridad, de principio a fin</h2>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,por que estás siempre protegid@.</p>
         </article>
 
-        <article>
-          <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTv" width="100%" />
-          <div class="cont">
-            <div class="precio-producto">
-              <p>$23.200</p>
-              <p>5% off</p>
-            </div>
-            <strong>SmartTv Samsung 43"</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
-        </article>
-      </section>
+            <p>Copyright c 1999-2020 MercadoLiebre S.R.L.</p>
+    </section>
+</footer>
 
-      <section>
-        <h3>Sección de Ofertas</h3>
-        <article>
-          <img
-            src="/img/img-cafetera-moulinex.jpg"
-            alt="Cafetera moulinex"
-            width="100%"
-          />
-          <div class="cont">
-            <div class="precio-producto">
-              <p>$6.770</p>
-              <p>40% off</p>
-            </div>
-            <strong>Cafetera Moulinex</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
-        </article>
-
-        <article>
-          <img src="/img/img-macbook-pro-2019.jpg" alt="MacBook" width="100%" />
-          <div class="cont">
-            <div class="precio-producto">
-              <p>$230.000</p>
-              <p>20% off</p>
-            </div>
-            <strong>MacBook Pro 2019</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
-        </article>
-
-        <article>
-          <img
-            src="/img/img-samsung-galaxy-s10.jpg"
-            alt="Samsung Galaxy"
-            width="100%"
-          />
-          <div class="cont">
-            <div class="precio-producto">
-              <p>$70.500</p>
-              <p>10% off</p>
-            </div>
-            <strong>Samsung Galaxy S10</strong>
-            <i class="fa-solid fa-truck"></i>
-          </div>
-        </article>
-
-        <article>
-          <img src="/img/img-tv-samsung-smart.jpg" alt="SmartTv" width="100%" />
-          <div class="cont">
-            <div class="precio-producto">
-              <p>$23.200</p>
-              <p>5% off</p>
-            </div>
-            <strong>SmartTv Samsung 43"</strong>
-          </div>
-          <i class="fa-solid fa-truck"></i>
-        </article>
-      </section>
-    </main>
-
-    <footer>
-      <article>
-        <i class="fas fa-credit-card"></i>
-        <h4>Pagá con tarjeta o en efectivo</h4>
-        <p>
-          Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
-          efectivo en puntos de pago. ¡Y siempre es seguro!
-        </p>
-      </article>
-
-      <article>
-        <i class="fas fa-gift"></i>
-        <h4>Envío gratis desde $ 2.500</h4>
-        <p>
-          Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
-          miles de productos. Es un beneficio de Mercado Puntos.
-        </p>
-      </article>
-
-      <article>
-        <i class="fas fa-user-shield"></i>
-        <h4>Seguridad, de principio a fin</h4>
-        <p>
-          ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas
-          hacer, porque estás siempre protegid@.
-        </p>
-      </article>
-
-      <p id="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-    </footer>
-  </body>
+</body>
 </html>
